Added files via upload

--- a/KillFuckMarry.html
+++ b/KillFuckMarry.html
@@ -7,15 +7,19 @@
     <meta name="description" content="Three People, Choose One To Kill, One To Fuck, One To Marry"</meta>
     </head>
     <body>
-      <script>
-        var textArray = [
-            "Kat Dennings",
-            "Nicki Minaj",
-            "Mindy Kaling",
-            "Taylor Swift",
-            "Jennifer Lawrence"
-            ];
-          var randomNumber1 = Math.floor(Math.random()*textArray.length);
+      <script language="JavaScript">
+        var killFuckArray = new Array ();
+            killFuckArray[0] = "Kat Dennings";
+            killFuckArray[1] = "Nicki Minaj";
+            killFuckArray[2] ="Mindy Kaling";
+            killFuckArray[3] = "Taylor Swift";
+            killFuckArray[4] = "Jennifer Lawrence";
+            var i = Math.floor(5*Math.random())
+            var j = Math.floor(5*Math.random())
+            var k - Math.floor(5*Math.random())
+          alert(killFuckArray[i]);
+          alert(killFuckArray[j]);
+          alert(killFuckArray[k]);
         </script>  
     </body>
 </html>
