Basic, functional, crude
Tons of repeats. Neil, I used your idea of putting 3 names in each string. Easier to manage variables.

--- a/KillFuckMarry.html
+++ b/KillFuckMarry.html
@@ -9,17 +9,66 @@
     <body>
       <script language="JavaScript">
         var killFuckArray = new Array ();
-            killFuckArray[0] = "Kat Dennings";
-            killFuckArray[1] = "Nicki Minaj";
-            killFuckArray[2] ="Mindy Kaling";
-            killFuckArray[3] = "Taylor Swift";
-            killFuckArray[4] = "Jennifer Lawrence";
-            var i = Math.floor(5*Math.random())
-            var j = Math.floor(5*Math.random())
-            var k - Math.floor(5*Math.random())
-          alert(killFuckArray[i]);
-          alert(killFuckArray[j]);
-          alert(killFuckArray[k]);
-        </script>  
+            killFuckArray[0] = "Kat Dennings, Nicki Minaj, Mindy Kaling";
+            killFuckArray[1] = "Nicki Minaj, Taylor Swift, Kim Kardashian";
+            killFuckArray[2] ="Mindy Kaling, Tina Fey, Ann Coulter";
+            killFuckArray[3] = "Taylor Swift, Ke$ha, Beyonce";
+            killFuckArray[4] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[5] = "Venus Williams, Hillary Clinton, Rachel Dolezal";
+            killFuckArray[6] = "Sabrina Divekar, Michelle Obama, Maya Rudolph";
+            killFuckArray[7] = "Emma Watson, Linsay Lohan (c. 2004), Miley Cyrus";
+            killFuckArray[8] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[9] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[10] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[11] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[12] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[13] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[14] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[15] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[16] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[17] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[18] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[19] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[20] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[21] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[22] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[23] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[24] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[25] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[26] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[27] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[28] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[29] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[30] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[31] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[32] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[33] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[34] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[35] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[36] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[37] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[38] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[39] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[40] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[41] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[42] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[43] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[44] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[45] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[46] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[47] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[48] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[49] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[50] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[51] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[52] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[53] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[54] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[55] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[56] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[57] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            var i = Math.floor(58*Math.random())
+            alert(killFuckArray[i]);
+          </script>  
     </body>
 </html>
