--- a/KillFuckMarry.html
+++ b/KillFuckMarry.html
@@ -17,8 +17,8 @@
             killFuckArray[5] = "Venus Williams, Hillary Clinton, Rachel Dolezal";
             killFuckArray[6] = "Sabrina Divekar, Michelle Obama, Maya Rudolph";
             killFuckArray[7] = "Emma Watson, Linsay Lohan (c. 2004), Miley Cyrus";
-            killFuckArray[8] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
-            killFuckArray[9] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
+            killFuckArray[8] = "Rosie O'Donnell, Whoopie Goldberg, Angela Merkel";
+            killFuckArray[9] = "Natalie Portman, Ariana Grande, Margot Robbie";
             killFuckArray[10] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
             killFuckArray[11] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
             killFuckArray[12] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
