Doc write instead of alert

--- a/KillFuckMarry.html
+++ b/KillFuckMarry.html
@@ -68,7 +68,7 @@
             killFuckArray[56] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
             killFuckArray[57] = "Jennifer Lawrence, Alison Brie, Nicki Minaj";
             var i = Math.floor(58*Math.random())
-            alert(killFuckArray[i]);
+            document.write(killFuckArray[i]);
           </script>  
     </body>
 </html>
